force-app/main/default/objects/Tiffin__c/Tiffin__c.object-meta.xml
<CustomObject>
    <description>Custom object to manage Tiffin services and meal planning</description>
    <label>Tiffin</label>
    <nameField>
        <displayFormat>TIF-{000000}</displayFormat>
        <label>Tiffin Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tiffins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>