force-app/main/default/objects/Tiffin__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <description>Complete delivery address for the tiffin</description>
    <label>Delivery Address</label>
    <type>TextArea</type>
</CustomField>