force-app/main/default/objects/Tiffin__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>Date when the tiffin should be delivered</description>
    <label>Delivery Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>