force-app/main/default/objects/Tiffin__c/fields/Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time__c</fullName>
    <description>Preferred delivery time for the tiffin</description>
    <label>Delivery Time</label>
    <type>Time</type>
</CustomField>