force-app/main/default/objects/Tiffin__c/fields/Meal_Type__c.field-meta.xml
<CustomField>
    <fullName>Meal_Type__c</fullName>
    <description>Type of meal (Breakfast, Lunch, Dinner, Snack)</description>
    <label>Meal Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
                <default>true</default>
                <label>Lunch</label>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Snack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>