force-app/main/default/objects/Tiffin__c/fields/Menu_Items__c.field-meta.xml
<CustomField>
    <fullName>Menu_Items__c</fullName>
    <description>List of food items included in the tiffin</description>
    <label>Menu Items</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>