force-app/main/default/objects/Tiffin__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Customer contact phone number</description>
    <label>Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>