force-app/main/default/objects/Tiffin__c/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <description>Any special dietary requirements or delivery instructions</description>
    <label>Special Instructions</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>