force-app/main/default/objects/Tiffin__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of the tiffin order</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordered</fullName>
                <default>true</default>
                <label>Ordered</label>
            </value>
            <value>
                <fullName>Preparing</fullName>
            </value>
            <value>
                <fullName>Ready for Delivery</fullName>
            </value>
            <value>
                <fullName>Out for Delivery</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>