force-app/main/default/objects/Tiffin__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Meal_Type__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Tiffins</label>
</ListView>