force-app/main/default/objects/Tiffin__c/listViews/Pending_Orders.listView-meta.xml
<ListView>
    <fullName>Pending_Orders</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Meal_Type__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Delivered,Cancelled</value>
    </filters>
    <label>Pending Orders</label>
</ListView>