force-app/main/default/objects/Tiffin__c/listViews/Todays_Deliveries.listView-meta.xml
<ListView>
    <fullName>Todays_Deliveries</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Meal_Type__c</columns>
    <columns>Delivery_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Delivery_Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Delivery_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today's Deliveries</label>
</ListView>